trunk/Archive2/e5/3bdc092bf59aee/output
main.cpp:8:5: error: static_assert failed "T doesn't derive from X!"
    static_assert( std::is_base_of<X,T>::value, "T doesn't derive from X!");
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:16:9: note: in instantiation of template class 'Test<B>' requested here
Test<B> b; // NOT OK
        ^
1 error generated.
